attempt to fix weird styling bug on mobile w/ background

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,7 +1,3 @@
-body {
-  background-image: url(../img/paperbackground.jpeg);
-  background-attachment: fixed;
-}
 
 .background {
 }
@@ -10,3 +6,23 @@ a {
   text-decoration: none;
   color: black;
 }
+
+@media only screen and (min-width: 768px) {
+
+  body {
+    background-image: url(../img/paperbackground.jpeg);
+    /* background-attachment: fixed; */
+  }
+  
+}
+
+@media only screen and (max-width: 768px) {
+
+  body {
+    background-image: url(../img/paperbackground.jpeg);
+    background-attachment: fixed;
+  }
+
+}
+
+
